Refactored the IGameBase to a Abstract class! Everything is better now.

--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -110,7 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Engine\IGameBase.cs" />
+    <Compile Include="Engine\GameBase.cs" />
     <Compile Include="Games\lapsytys.cs" />
     <Compile Include="Games\SampleGame.cs" />
     <Compile Include="Games\HelloWorld.cs" />
