--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -111,7 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\GameBase.cs" />
+    <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Games\lapsytys.cs" />
+    <Compile Include="Games\ParticleExample.cs" />
     <Compile Include="Games\SampleGame.cs" />
     <Compile Include="Games\HelloWorld.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
