--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Engine\GameBase.cs" />
     <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Games\Feedgame.cs" />
+    <Compile Include="Games\FeedGameSrc\Kaappi.cs" />
     <Compile Include="Games\KoodiRage.cs" />
     <Compile Include="Games\lapsytys.cs" />
     <Compile Include="Games\Olut.cs" />
