--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Engine\GameBase.cs" />
     <Compile Include="Engine\ParticleManager.cs" />
+    <Compile Include="Games\Lampunvaihto.cs" />
     <Compile Include="Games\Feedgame.cs" />
     <Compile Include="Games\FeedGameSrc\Kaappi.cs" />
     <Compile Include="Games\KoodiRage.cs" />
