--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -123,7 +123,7 @@
     <Compile Include="Games\HelloWorld.cs" />
     <Compile Include="Games\Shooty.cs" />
     <Compile Include="Games\tentti.cs" />
-    <Compile Include="SpotLanguage.cs" />
+    <Compile Include="Games\SpotLanguage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="InssiGame.cs" />
