Kuumeessa, voi vittu.

--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Games\lapsytys.cs" />
     <Compile Include="Games\Olut.cs" />
     <Compile Include="Games\ParticleExample.cs" />
+    <Compile Include="Games\rollibyrintti.cs" />
     <Compile Include="Games\SampleGame.cs" />
     <Compile Include="Games\HelloWorld.cs" />
     <Compile Include="Games\Shooty.cs" />
