--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Engine\TipManager.cs" />
     <Compile Include="Games\DontShootJorma.cs" />
+    <Compile Include="Games\Kysymys.cs" />
     <Compile Include="Games\Lampunvaihto.cs" />
     <Compile Include="Games\Feedgame.cs" />
     <Compile Include="Games\FeedGameSrc\Kaappi.cs" />
