--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine\GameBase.cs" />
+    <Compile Include="Engine\Input.cs" />
     <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Engine\TipManager.cs" />
     <Compile Include="Games\DontShootJorma.cs" />
