Story manager manages the story of the inssi!

--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Engine\GameBase.cs" />
     <Compile Include="Engine\InputManager.cs" />
     <Compile Include="Engine\ParticleManager.cs" />
+    <Compile Include="Engine\StoryManager.cs" />
     <Compile Include="Engine\TipManager.cs" />
     <Compile Include="Games\Pallo.cs" />
     <Compile Include="Games\speedtester.cs" />
