--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Engine\StoryManager.cs" />
     <Compile Include="Engine\TipManager.cs" />
+    <Compile Include="Games\valikko.cs" />
     <Compile Include="Games\valikko_demo.cs" />
     <Compile Include="Games\Pallo.cs" />
     <Compile Include="Games\speedtester.cs" />
