--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Games\SilitaKissaa.cs" />
     <Compile Include="Games\tentti.cs" />
     <Compile Include="Games\SpotLanguage.cs" />
+    <Compile Include="Objects\ATJ.cs" />
     <Compile Include="Objects\Cannonball.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
