--- a/InssiParty/InssiParty/InssiParty.csproj
+++ b/InssiParty/InssiParty/InssiParty.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Engine\InputManager.cs" />
     <Compile Include="Engine\ParticleManager.cs" />
     <Compile Include="Engine\TipManager.cs" />
+    <Compile Include="Games\Siivoa.cs" />
     <Compile Include="Games\valikko.cs" />
     <Compile Include="Games\valikko_demo.cs" />
     <Compile Include="Games\Pallo.cs" />
